--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -247,6 +247,8 @@
 	data-input="input" data-default="'default label'"></a>
       <a title="Add Textarea" class="toolbar-item" id="formtextarea"
 	data-input="textarea" data-default="'default label'"></a>
+      <a title="Add Fixedval" class="toolbar-item" id="formfixedval"
+	data-input="fixedval" data-default="'default label', 0, true"></a>
       <a title="Add Select Box" class="toolbar-item" id="formselect"
 	data-input="select" data-default="'default label', {1,2,3}"></a>
       <a title="Add Radio Butttons" class="toolbar-item" id="formradio"
