--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -81,7 +81,7 @@ body {
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
 }
-.hninput, .hn-webcontrol, .hn-maprows, .hn-mapsheet {
+.hninput, .hn-webcontrol, .hn-maprows, .hn-mapsheet, .hnfixedval {
     font-size:inherit;
     width:100%;
     height:100%;
