--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/finder.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/finder.css
@@ -1,16 +1,15 @@
 #finder {
     background : white;
-    width      : 78%; 
-    float      : left;
+    width      : 100%;
 }
 
 #finder .panewrapper {
-    height     : 360px;
-    overflow-x : scroll; 
-    overflow-y : scroll; 
+    height     : 277px;
+    overflow-x : auto;
+    overflow-y : auto;
 }
 
-#finder .pane {  
-   height : 100%; 
+#finder .pane {
+   height : 100%;
 }
 
