--- a/lib/hypernumbers-1.0/priv/core_install/views/table.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/table.html
@@ -26,7 +26,7 @@
     <h2>Show/Hide Columns</h2>
     <a id="dialogclose">x</a>
     <div id="columnsconfig" class="scrollable"></div>
-    <div class="footer"><a class="resize">&#x21f2;</a></div>
+    <div class="footer"><a class="resize"></a></div>
     </div>
 
     <div id="lineview" class="dialog" style="display:none;">
