--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -471,7 +471,7 @@ label {
     color:#666;
 }
 
-#templateslist {
+#templateslist, #hn_uf_select {
   background-color: #ffffff;
   color:            #555555;
   width:            98px;
@@ -641,6 +641,19 @@ label {
 {
   border: 4px solid #666;
   margin: 2px;
+  }
+
+.hn_html_preview
+ {
+  font-size:        60%;
+  font-weight:      bold;
+  background-color: #EEE;
+  color:            #777;
+  margin:           2px;
+  padding:          1px 1px 1px 4px;
+  -moz-border-radius:    4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  border:           1px solid #E99;
   }
 
 #hn_newpageform, #hn_saveastemplateform, #hn_douploadform, #hn_deletepageform
