--- a/lib/hypernumbers-1.0/priv/core_install/views/forgotten_password.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/forgotten_password.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/hypernumbers/hn.style.css" />  
   <link rel="stylesheet" href="/hypernumbers/hn.boxes.css" />  
     
+  <script src="/hypernumbers/json2.min.js"></script>
   <script src="/hypernumbers/jquery-1.4.2.min.js"></script>
   <script src="/hypernumbers/hn.js"></script>
   <script src="/hypernumbers/hn.util.js"></script>
