Big set of changes for uploading files.
Can now do:
* custom maps (no way to build them yet)
* add mutiple templates to the tree of the file upload
* fix for checking if pages exist
* can not upload pages from blank spreadsheets

As well as custom stuff for pret:
* a user map fn that turns upload spreadsheet values into paths

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -81,7 +81,7 @@ body {
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
 }
-.hninput, .hn-webcontrol, .hn-maprows, .hn-mapsheet, .hnfixedval {
+.hninput, .hn-webcontrol, .hn-maprows, .hn-mapsheet, .hn-mapcustom, .hnfixedval {
     font-size:inherit;
     width:100%;
     height:100%;
