--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -1386,7 +1386,7 @@ z-index     : 10000002;
     font-style:     italic;
 }
 
-#doupload, .hn-maprows, .hn-mapsheet .hn-webcontrol {
+#doupload, .hn-maprows, .hn-mapsheet, .hn-mapcustom, .hn-webcontrol {
     cursor:pointer;
 }
 
@@ -1590,7 +1590,7 @@ z-index     : 10000002;
     width: 100px
 }
 
-.button, .tournavigate, .hn-maprows, .hn-mapsheet, .hn-webcontrol, #doupload, #ctrldelete, #saveastemplate, #pdvisit, #newspreadsheet, #wizdone, #wizcanc {
+.button, .tournavigate, .hn-maprows, .hn-mapsheet, .hn-mapcustom, .hn-webcontrol, #doupload, #ctrldelete, #saveastemplate, #pdvisit, #newspreadsheet, #wizdone, #wizcanc {
     background:#EEE;
     -webkit-border-radius:3px 3px 3px 3px;
     -moz-border-radius:3px 3px 3px 3px;
