--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -474,15 +474,17 @@
         <div class="hn_uf_txt">Function Description</div>
         <input type="text" class="hn_uf_inp" id="hn_uf_fndesc" />
         <div class="clear"></div>
+        <div class="hn_uf_txt">Return Value:</div>
+          <input type="text" class="hn_uf_inp" id="hn_uf_retcell" />
+        <div class="clear"></div>
         <div id="hn_uf_params">
           <div id="hn_parameters"></div>
         </div>
-        <div class="clear"></div>
-        <div class="hn_uf_txt">Return Value:</div>
-          <input type="text" class="hn_uf_inp" id="hn_uf_retcell" />
         </div>
-        <p id="hn_makeuserdeffnsblurb">(Tip: use the <em><code>user_def_fns</code></em> template)</p>
-        <div class="footer"><a class="resize"></a></div>
+        <div class="footer">
+          <input type='button' class='hn_userdef_btn' value='Submit' />
+          <a class="resize"></a>
+        </div>
     </div>
     <div id="hn_makewikiselect" class="mdialog">
         <h2>$txt:{Wiki Select Box}$</h2>
