New logging function to capturing javascript errors and logging them
This feature:
* captures javascript errors in the browser
* asks the users to give some input/leave a phone no or e-mail
* captures the context of the error
* fires the lot to the back end where it is logged

Errors are logged into mochilog and no other action is taken.

Work needs to be done to surface them from the user logs in a timely fashion

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/tooltip/jquery.tooltip.css" />
   </head>
 
+  <script src="/hypernumbers/err.remoterr.js"></script>
+
   <body id="hn" data-view="spreadsheet">
     <div id="pagemenu" style="background-color:#000;">
     <div id="pagemarker"><div>pages:</div></div>
