--- a/lib/hypernumbers-1.0/priv/core_install/views/table.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/table.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
     <link rel="stylesheet" href="/tblsorter/style.css" />
   </head>
-
+  <script src="/hypernumbers/err.remoterr.js"></script>
   <body data-view="table">
 
     <div id="overlay"></div>
