Big commit of dynamic selects.
Also includes a few bugs swept up on the way:
* fixed a display bug that meant the first rendered view of a wikipage and the redrawn one were differently styled.
* added a cvs parser library to hn.util.js
* fixed a mochijson bug in the jsonification process

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -12,9 +12,7 @@
     <link rel="stylesheet" href="/tblsorter/style.css" />
     <link rel="stylesheet" href="/tooltip/jquery.tooltip.css" />
   </head>
-
   <script src="/hypernumbers/err.remoterr.js"></script>
-
   <body id="hn" data-view="spreadsheet">
     <div id="pagemenu" style="background-color:#000;">
     <div id="pagemarker"><div>pages:</div></div>
@@ -494,8 +492,10 @@
         <a id="hn_makewikiselectclose">x</a>
           <p id="hn_makewikiselectblurb">This dialog box will replace the cell
           <span id="hn_wikiselectcell"></span> with a select (dropdown) box.</p>
-          <p>Type the values you want to put into the select box
-          separated by commas. To delete a select box just clear the values
+          <p>You can either type the values you want to put into the select box
+          separated by commas, or put in a cell or range like './a1',
+          '/some/page/b2:c7' or a z-query like '../[a1>3]/b2:b4'.
+          To delete a select box just clear the values
           and submit.</p>
           <input type="text" id="hn_insertwikiselect" />
           <input type="button", id="hn_wikiselectsubmit" value="Submit" />
