--- a/lib/hypernumbers-1.0/priv/core_install/docroot/tblsorter/style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/tblsorter/style.css
@@ -18,6 +18,7 @@ table.tablesorter tbody tr.even td {
     background-color: #ffffff;
 }
 table.tablesorter thead tr .header {
+       padding: 0 20px;
        background-repeat: no-repeat;
        background-position: center right;
        cursor: pointer;
