--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -838,8 +838,8 @@
     </div>
   </body>
 
-    <script src="/hypernumbers/jquery-1.4.2.min.js"></script>
-    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>-->
+    <script src="/hypernumbers/jquery-1.7.1.js"></script>
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
 <!-- <script src="http://crypto-js.googlecode.com/files/2.0.0-crypto-md5.js"></script> -->
     <script src="/hypernumbers/jquery-ext.js"></script>
     <script src="/hypernumbers/json2.min.js"> </script>
@@ -866,9 +866,9 @@
     <script src="/jscolor/jscolor.js"></script>
     <script src="/hypernumbers/hn.ui.ctrlpanel.js"></script>
     <script src="/hypernumbers/hn.site.js"></script>
-    <script src="/hypernumbers/hn.main.js"></script>
     <script src="/hypernumbers/hn.dialog.js"></script>
     <script src="/hypernumbers/hn.userdeffns.js"></script>
     <script src="/tooltip/jquery.tooltip.min.js"></script>
     <script src="/hypernumbers/jquery.scrollbarWidth.min.js"></script>
+    <script src="/hypernumbers/hn.main.js"></script>
 </html>
