add JSON to the 401 page - seems to cause a 401 bug on IE7, eh?

--- a/lib/hypernumbers-1.0/priv/core_install/views/401.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/401.html
@@ -62,6 +62,7 @@
     </div>
   <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
   <script src="/hypernumbers/jquery-1.7.1.min.js"></script>
+  <script src="/hypernumbers/json2.min.js"></script>
   <script src="/hypernumbers/hn.js"></script>
   <script src="/hypernumbers/hn.util.js"></script>
   <script>
