hmm, that works, now add some more...

--- a/lib/hypernumbers-1.0/priv/core_install/views/404.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/404.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
     <link rel="stylesheet" href="/hypernumbers/hn.boxes.css" />
 
+    <script src="/hypernumbers/json2.min.js"></script>
     <script src="/hypernumbers/jquery-1.7.1.min.js"></script>
     <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
     <script src="/hypernumbers/hn.js"></script>
