--- a/lib/hypernumbers-1.0/priv/core_install/views/cell.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/cell.html
@@ -13,6 +13,7 @@
     @import "/hypernumbers/hn.login.css";
   </style>
 
+  <script src="/hypernumbers/json2.min.js"></script>
   <script type="text/javascript" src="/hypernumbers/jquery-1.7.1.min.js">
   </script>
   <script type="text/javascript" src="/hypernumbers/hn.cell.js"></script>
