--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -496,9 +496,9 @@
           separated by commas, or put in a cell or range like './a1',
           '/some/page/b2:c7' or a z-query like '../[a1>3]/b2:b4'.
           To delete a select box just clear the values
-          and submit.</p>
+          and save.</p>
           <input type="text" id="hn_insertwikiselect" />
-          <input type="button", id="hn_wikiselectsubmit" value="Submit" />
+          <input type="button", id="hn_wikiselectsubmit" class="button" value="Save" />
         </div>
     </div>
     <div id="insertimagedialog" class="mdialog">
