--- a/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/hn.phone.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/hn.phone.css
@@ -1,8 +1,4 @@
-/* CSS file for the Twilio softphones */
-/* it is called twiliolib because of a namespace collision bug in
-   twilio client libraries */
-
-.hn-twilio-outbound_img {
+.hn-outboundphone_img {
                           width               : 100%;
                           background-image    : url(/img/telephone.png);
                           background-repeat   : no-repeat;
