--- a/lib/hypernumbers-1.0/priv/core_install/views/recalc.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/recalc.html
@@ -6,7 +6,7 @@
 </head>
 
 <body style='margin:0px;padding:0px;font: 12px/1.7 Verdana,Tahoma,sans-serif;text-align:center'>
-<h2>Your page is recalcing.</h2>
+<h2>Recalculating.</h2>
 
 <p>Sorry you have to use this functionality.</p>
 <p>The Hypernumbers Team are working on it.</p>
