--- a/lib/hypernumbers-1.0/priv/core_install/views/reprovision.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/reprovision.html
@@ -7,5 +7,5 @@
 <body>
 <h1>Reprovisioning</h1>
 
-The site <a href='http://usability.hypernumbers.com:8080'>Usability Testing Site</a> has been reprovisioned.
+The <a href='http://usability.hypernumbers.com:8080'>Usability Testing Site</a> has been reprovisioned.
 </body> </html>
