--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -82,7 +82,7 @@ body {
     -webkit-box-sizing:border-box;
 }
 
-.hninput, .hn-webcontrol, .hn-maprows, .hn-mapsheet, .hn-mapcustom, .hn-loadtemplate, .hnfixedval {
+.hninput, #hn-outboundphone, .hn-webcontrol, .hn-maprows, .hn-mapsheet, .hn-mapcustom, .hn-loadtemplate, .hnfixedval, .hn-toggleviews {
     font-size:inherit;
     width:100%;
     height:100%;
