Added manual sms sending to the softphone
Also did stuff to make it better:
* broke out the javascript into its own file
* rejigged the api
* added new authentication for sending sms

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/phone/hn.phone.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/phone/hn.phone.css
@@ -1,5 +1,5 @@
 #hn-phone-frame{
-    height : 110px;
+    height : auto;
     width  : 200px;
     margin : 20 auto;
     border : 8px solid #eee;
@@ -13,6 +13,14 @@
     font-weight : bold;
     line-height : 105%;
     color       : darkorange;
+    text-align  : center;
+}
+
+#hn-phone-headline {
+    margin: 5px 0px;
+    font-weight : bold;
+    line-height : 105%;
+    color       : #666;
     text-align  : center;
 }
 
@@ -31,7 +39,7 @@
     padding:3px 6px;
     text-align:center;
     white-space:nowrap;
-    margin : 0 0 0 20px;
+    margin : 0 0 20px 20px;
 }
 
 #hn-phone-img {
