More phone functionality
We now have:
* an auto sms fn
* a manual sms fn
* logging of all calls/sms's to a common contact page

--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone.html
@@ -8,11 +8,12 @@
     <h2>Hypernumbers SoftPhone</h2>
     <hr />
     <div id='hn-phone-headline'></div>
+    <div id='hn-phone-msg'></div>
     <button id='hn-phone' disabled>
       <div id='hn-phone-img'>Phone</div>
     </button>
-    </div>
     <div id='hn-phone-response'></div>
+    </div>
     <script src='/hypernumbers/jquery-1.7.1.min.js'></script>
     <script src='/phone/hn.phone.js'></script>
     <script src='http://static.twilio.com/libs/twiliojs/1.0/twilio.js'></script>
