--- a/lib/hypernumbers-1.0/priv/core_install/docroot/phone/hn.phone.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/phone/hn.phone.css
@@ -16,11 +16,21 @@
     text-align  : center;
 }
 
-#hn-phone-headline {
-    margin: 5px 0px;
+#hn-phone-headline, #hn-phone-response {
     font-weight : bold;
-    line-height : 105%;
+}
+
+#hn-phone-response {
+    color : darkorange;
+}
+
+#hn-phone-headline, #hn-phone-msg {
     color       : #666;
+}
+
+#hn-phone-headline, #hn-phone-msg, #hn-phone-response {
+    margin      : 5px 0px;q
+    line-height : 105%;
     text-align  : center;
 }
 
@@ -39,7 +49,7 @@
     padding:3px 6px;
     text-align:center;
     white-space:nowrap;
-    margin : 0 0 20px 20px;
+    margin : 0 0 10px 20px;
 }
 
 #hn-phone-img {
