move phone javascript to /contacts/

--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone.html
@@ -1,6 +1,6 @@
 <html>
   <title>Hypernumbers SoftPhone</title>
-  <link rel='stylesheet' href='/phone/hn.phone.css' />
+  <link rel='stylesheet' href='/contacts/hn.phone.css' />
   <link rel='stylesheet' href='/hypernumbers/hn.sheet.css' />
   <link rel='stylesheet' href='/hypernumbers/hn.style.css' />
   <body>
@@ -15,7 +15,7 @@
     <div id='hn-phone-response'></div>
     </div>
     <script src='/hypernumbers/jquery-1.7.1.min.js'></script>
-    <script src='/phone/hn.phone.js'></script>
+    <script src='/contacts/hn.phone.js'></script>
     <script src='http://static.twilio.com/libs/twiliojs/1.0/twilio.js'></script>
   </body>
 </html>
