added remote error handling to softphone

--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone.html
@@ -3,6 +3,7 @@
   <link rel='stylesheet' href='/contacts/hn.phone.css' />
   <link rel='stylesheet' href='/hypernumbers/hn.sheet.css' />
   <link rel='stylesheet' href='/hypernumbers/hn.style.css' />
+  <script src="/hypernumbers/err.remoterr.js"></script>
   <body>
     <div id='hn-phone-frame' style='display:none'>
     <h2>Hypernumbers SoftPhone</h2>
